CLEREZZA-372: removed properties exif width and height of an infodiscobit before adding them
git-svn-id: https://svn.apache.org/repos/asf/incubator/clerezza/trunk@1052471 13f79535-47bb-0310-9956-ffa450edef68